chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "bybil",
 	"type": "module",
 	"version": "0.0.1",
-	"private": true,
+	"private": false,
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rjoss/mizar.git"
+		"url": "https://github.com/rujorgensen/bybil.git"
 	},
-	"bugs": "https://github.com/rjoss/mizar/issues",
+	"bugs": "https://github.com/rujorgensen/bybil/issues",
 	"homepage": "https://bybil.nu",
 	"scripts": {
 		"dev": "astro dev",
@@ -19,54 +19,56 @@
 		"pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg",
 		"docker:build": "docker build -t bybil:latest -f .deploy/Dockerfile .",
 		"docker:run": "docker run --rm -p 6122:6122 bybil:latest",
-		"dock": "bun docker:build && bun docker:run"
+		"dock": "bun docker:build && bun docker:run",
+		"upd": "ncu -i --format group"
 	},
 	"dependencies": {
-		"@astrojs/alpinejs": "^0.4.0",
+		"@astrojs/alpinejs": "^0.4.8",
 		"@astrojs/cloudflare": "0.0.0-cf-deps-chunk-20240407075425",
-		"@astrojs/markdoc": "^0.11.0",
+		"@astrojs/markdoc": "^0.15.0",
+		"@astrojs/node": "8.3.3",
 		"@astrojs/react": "^3.4.0",
-		"@astrojs/rss": "^4.0.6",
-		"@astrojs/sitemap": "^3.1.5",
+		"@astrojs/rss": "^4.0.11",
+		"@astrojs/sitemap": "^3.4.0",
 		"@astrojs/tailwind": "^5.1.0",
 		"@cloudflare/pages-plugin-mailchannels": "^0.1.5",
-		"@keystatic/astro": "^5.0.0",
-		"@keystatic/core": "^0.5.17",
-		"alpinejs": "^3.14.0",
+		"@keystatic/astro": "^5.0.6",
+		"@keystatic/core": "^0.5.47",
+		"alpinejs": "^3.14.9",
 		"astro": "4.7.0",
-		"gsap": "^3.12.5",
+		"gsap": "^3.13.0",
 		"keystatic-components": "^0.0.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.7.3",
+		"@biomejs/biome": "1.9.4",
 		"@bobthered/tailwindcss-palette-generator": "^3.2.3",
 		"@cloudflare/workers-types": "^4.20240524.0",
-		"@iconify-json/ic": "^1.1.17",
-		"@iconify-json/iconamoon": "^1.1.4",
-		"@iconify-json/mdi": "^1.1.66",
-		"@iconify-json/ph": "^1.1.13",
-		"@iconify-json/solar": "^1.1.9",
+		"@iconify-json/ic": "^1.2.2",
+		"@iconify-json/iconamoon": "^1.2.2",
+		"@iconify-json/mdi": "^1.2.3",
+		"@iconify-json/ph": "^1.2.2",
+		"@iconify-json/solar": "^1.2.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/alpinejs": "^3.13.10",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/alpinejs": "^3.13.11",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vite-pwa/assets-generator": "^0.2.4",
 		"@vite-pwa/astro": "^0.4.0",
-		"astro-icon": "^1.1.0",
+		"astro-icon": "^1.1.5",
 		"astro-robots-txt": "^1.0.0",
-		"astro-seo": "^0.8.3",
-		"satori": "^0.10.13",
-		"sharp": "0.33.4",
+		"astro-seo": "^0.8.4",
+		"satori": "^0.13.2",
+		"sharp": "0.34.2",
 		"tailwindcss": "^3.4.3",
-		"workbox-window": "^7.1.0"
+		"workbox-window": "^7.3.0"
 	},
 	"packageManager": "bun@1.2.15",
 	"overrides": {
-		"gsap": "^3.12.5",
-		"sharp": "0.33.4"
+		"gsap": "^3.13.0",
+		"sharp": "0.34.2"
 	}
 }
