--- a/package.json
+++ b/package.json
@@ -24,26 +24,26 @@
 	},
 	"dependencies": {
 		"@astrojs/alpinejs": "^0.4.8",
-		"@astrojs/cloudflare": "0.0.0-cf-deps-chunk-20240407075425",
+		"@astrojs/cloudflare": "12.5.3",
 		"@astrojs/markdoc": "^0.15.0",
-		"@astrojs/node": "8.3.3",
-		"@astrojs/react": "^3.4.0",
+		"@astrojs/node": "9.2.2",
+		"@astrojs/react": "4.3.0",
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.4.0",
-		"@astrojs/tailwind": "^5.1.0",
+		"@astrojs/tailwind": "6.0.2",
 		"@cloudflare/pages-plugin-mailchannels": "^0.1.5",
 		"@keystatic/astro": "^5.0.6",
 		"@keystatic/core": "^0.5.47",
 		"alpinejs": "^3.14.9",
-		"astro": "4.7.0",
+		"astro": "5.8.1",
 		"keystatic-components": "^0.0.2",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@bobthered/tailwindcss-palette-generator": "^3.2.3",
-		"@cloudflare/workers-types": "^4.20240524.0",
+		"@cloudflare/workers-types": "^4.20250603.0",
 		"@iconify-json/ic": "^1.2.2",
 		"@iconify-json/iconamoon": "^1.2.2",
 		"@iconify-json/mdi": "^1.2.3",
@@ -53,10 +53,10 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/alpinejs": "^3.13.11",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@vite-pwa/assets-generator": "^0.2.4",
-		"@vite-pwa/astro": "^0.4.0",
+		"@types/react": "^19.1.6",
+		"@types/react-dom": "^19.1.5",
+		"@vite-pwa/assets-generator": "^1.0.0",
+		"@vite-pwa/astro": "^1.1.0",
 		"astro-icon": "^1.1.5",
 		"astro-robots-txt": "^1.0.0",
 		"astro-seo": "^0.8.4",
