feat: add redirect and log to Discord

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@keystatic/astro": "^5.0.6",
 		"@keystatic/core": "^0.5.47",
 		"astro": "5.10.1",
+		"discord.js": "^14.21.0",
 		"keystatic-components": "^0.0.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
