--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/bun": "^1.2.17",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vite-pwa/assets-generator": "^1.0.0",
