--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"docker:run": "docker run --rm -p 6122:6122 bybil:latest",
 		"dock": "bun docker:build && bun docker:run",
 		"upd": "ncu -i --format group",
-		"format": "biome format --write"
+		"format": "biome format --write",
+		"qr:generate": "qrcode -d 09366D -o ./data/logo-and-qr/qr-code.png \"https://bybil.nu/r\""
 	},
 	"dependencies": {
 		"@astrojs/markdoc": "^0.15.0",
@@ -56,6 +57,7 @@
 		"astro-icon": "^1.1.5",
 		"astro-robots-txt": "^1.0.0",
 		"astro-seo": "^0.8.4",
+		"qrcode": "^1.5.4",
 		"satori": "^0.15.2",
 		"sharp": "0.34.2",
 		"tailwindcss": "^3.4.3",
