--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
 		"docker:build": "docker build -t bybil:latest -f .deploy/Dockerfile .",
 		"docker:run": "docker run --rm -p 6122:6122 bybil:latest",
 		"dock": "bun docker:build && bun docker:run",
-		"upd": "ncu -i --format group",
+		"upd": "bun upgrade && ncu -i --format group",
 		"format": "biome format --write",
 		"qr:generate": "qrcode -d 09366D -o ./data/logo-and-qr/qr-code.svg --type=svg \"https://bybil.nu/r/ek42435\""
 	},
 	"dependencies": {
-		"@astrojs/markdoc": "^0.15.0",
-		"@astrojs/node": "9.2.2",
+		"@astrojs/markdoc": "^0.15.1",
+		"@astrojs/node": "9.3.0",
 		"@astrojs/react": "4.3.0",
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.4.1",
 		"@astrojs/tailwind": "6.0.2",
 		"@keystatic/astro": "^5.0.6",
 		"@keystatic/core": "^0.5.47",
-		"astro": "5.10.2",
+		"astro": "5.12.0",
 		"discord.js": "^14.21.0",
 		"keystatic-components": "^0.0.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.6",
+		"@biomejs/biome": "2.1.2",
 		"@bobthered/tailwindcss-palette-generator": "^4.0.0",
 		"@iconify-json/ic": "^1.2.2",
 		"@iconify-json/iconamoon": "^1.2.2",
@@ -49,7 +49,7 @@
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
-		"@types/bun": "^1.2.17",
+		"@types/bun": "^1.2.18",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vite-pwa/assets-generator": "^1.0.0",
@@ -59,12 +59,12 @@
 		"astro-seo": "^0.8.4",
 		"qrcode": "^1.5.4",
 		"satori": "^0.15.2",
-		"sharp": "0.34.2",
+		"sharp": "0.34.3",
 		"tailwindcss": "^3.4.3",
 		"workbox-window": "^7.3.0"
 	},
-	"packageManager": "bun@1.2.17",
+	"packageManager": "bun@1.2.19",
 	"overrides": {
-		"sharp": "0.34.2"
+		"sharp": "0.34.3"
 	}
 }
