--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ pnpm-debug.log*
 .unlighthouse
 
 .wrangler
+
+# Added when initialising NX
+.nx/cache
+.nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
