--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,5 +1,13 @@
 {
-	"extends": "astro/tsconfigs/strict",
+	"extends": [
+		"../../tsconfig.base.json",
+		"astro/tsconfigs/strict"
+	],
+	"include": [
+		".astro/types.d.ts",
+		"**/*"
+	],
+
 	"compilerOptions": {
 		"jsx": "react-jsx",
 		"jsxImportSource": "react",
