--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ pnpm-debug.log*
 .nx/workspace-data
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
