--- a/package.json
+++ b/package.json
@@ -1,72 +1,94 @@
 {
-	"name": "bybil",
-	"type": "module",
-	"version": "0.0.11",
-	"private": false,
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/rujorgensen/bybil.git"
-	},
-	"bugs": "https://github.com/rujorgensen/bybil/issues",
-	"homepage": "https://bybil.nu",
-	"scripts": {
-		"wrangler:dev": "wrangler pages dev",
-		"pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg",
-		"docker:build": "docker build -t bybil:latest -f .deploy/Dockerfile .",
-		"docker:run": "docker run --rm -p 6122:6122 bybil:latest",
-		"dock": "bun docker:build && bun docker:run",
-		"upd": "bun upgrade && ncu -i --format group",
-		"format": "biome format --write",
-		"qr:generate": "qrcode -d 09366D -o ./data/logo-and-qr/qr-code.svg --type=svg \"https://bybil.nu/r/ek42435\""
-	},
-	"dependencies": {
-		"@astrojs/markdoc": "^0.15.1",
-		"@astrojs/node": "9.3.0",
-		"@astrojs/react": "4.3.0",
-		"@astrojs/rss": "^4.0.12",
-		"@astrojs/sitemap": "^3.4.1",
-		"@astrojs/tailwind": "6.0.2",
-		"@keystatic/astro": "^5.0.6",
-		"@keystatic/core": "^0.5.47",
-		"astro": "5.12.0",
-		"discord.js": "^14.21.0",
-		"keystatic-components": "^0.0.2",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.1.2",
-		"@bobthered/tailwindcss-palette-generator": "^4.0.0",
-		"@iconify-json/ic": "^1.2.2",
-		"@iconify-json/iconamoon": "^1.2.2",
-		"@iconify-json/mdi": "^1.2.3",
-		"@iconify-json/ph": "^1.2.2",
-		"@iconify-json/solar": "^1.2.2",
-		"@nx/js": "^21.3.0",
-		"@swc-node/register": "~1.9.1",
-		"@swc/core": "~1.5.7",
-		"@swc/helpers": "~0.5.11",
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"@types/bun": "^1.2.18",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"@vite-pwa/assets-generator": "^1.0.0",
-		"@vite-pwa/astro": "^1.1.0",
-		"astro-icon": "^1.1.5",
-		"astro-robots-txt": "^1.0.0",
-		"astro-seo": "^0.8.4",
-		"nx": "21.1.2",
-		"qrcode": "^1.5.4",
-		"satori": "^0.15.2",
-		"sharp": "0.34.3",
-		"tailwindcss": "^3.4.3",
-		"workbox-window": "^7.3.0"
-	},
-	"packageManager": "bun@1.2.19",
-	"overrides": {
-		"sharp": "0.34.3"
-	},
-	"nx": {}
+  "name": "bybil",
+  "type": "module",
+  "version": "0.0.11",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rujorgensen/bybil.git"
+  },
+  "bugs": "https://github.com/rujorgensen/bybil/issues",
+  "homepage": "https://bybil.nu",
+  "scripts": {
+    "wrangler:dev": "wrangler pages dev",
+    "pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg",
+    "docker:build": "docker build -t bybil:latest -f .deploy/Dockerfile .",
+    "docker:run": "docker run --env-file=.env --rm -p 6122:6122 bybil:latest",
+    "dock": "bun docker:build && bun docker:run",
+    "upd": "bun upgrade && ncu -i --format group",
+    "format": "biome format --write",
+    "qr:generate": "qrcode -d 09366D -o ./data/logo-and-qr/qr-code.svg --type=svg \"https://bybil.nu/r/ek42435\"",
+    "pdf:generate": "bun run --hot /home/rj/workspace/bybil/libs/shared/utilities/pdf/contract-and-invoice/src/lib/shared-utilities-pdf-contract-and-invoice.ts "
+  },
+  "dependencies": {
+    "@astrojs/markdoc": "^0.15.4",
+    "@astrojs/node": "9.4.0",
+    "@astrojs/react": "4.3.0",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.4.2",
+    "@astrojs/tailwind": "6.0.2",
+    "@keystatic/astro": "^5.0.6",
+    "@keystatic/core": "^0.5.48",
+    "astro": "5.12.9",
+    "discord.js": "^14.21.0",
+    "keystatic-components": "^0.0.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.1.4",
+    "@bobthered/tailwindcss-palette-generator": "^4.0.0",
+    "@eslint/js": "^9.33.0",
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/iconamoon": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/solar": "^1.2.2",
+    "@nx/eslint": "21.3.11",
+    "@nx/eslint-plugin": "21.3.11",
+    "@nx/js": "21.3.11",
+    "@nx/vite": "21.3.11",
+    "@nx/web": "21.3.11",
+    "@swc-node/register": "~1.10.10",
+    "@swc/core": "~1.13.3",
+    "@swc/helpers": "~0.5.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/bun": "^1.2.19",
+    "@types/node": "18.16.9",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "@vite-pwa/astro": "^1.1.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "ajv": "^8.17.1",
+    "astro-icon": "^1.1.5",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.4",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "jiti": "2.5.1",
+    "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.4.0",
+    "nx": "21.3.11",
+    "prettier": "^2.6.2",
+    "qrcode": "^1.5.4",
+    "satori": "^0.16.2",
+    "sharp": "0.34.3",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.8.1",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.39.0",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.4",
+    "vitest": "^3.2.4",
+    "workbox-window": "^7.3.0"
+  },
+  "packageManager": "bun@1.2.20",
+  "overrides": {
+    "sharp": "0.34.3"
+  },
+  "nx": {}
 }
