--- a/nx.json
+++ b/nx.json
@@ -12,6 +12,26 @@
 		},
 		"docker:build": {
 			"cache": true
+		},
+		"@nx/js:tsc": {
+			"cache": true,
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"default",
+				"^default"
+			]
+		},
+		"@nx/esbuild:esbuild": {
+			"cache": true,
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"default",
+				"^default"
+			]
 		}
 	},
 	"plugins": [
