--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,26 +1,27 @@
 {
-  "recommendations": [
-    "astro-build.astro-vscode",
-    "christian-kohler.path-intellisense",
-    "aaron-bond.better-comments",
-    "biomejs.biome",
-    "bradlc.vscode-tailwindcss",
-    "github.copilot",
-    "github.copilot-chat",
-    "github.vscode-github-actions",
-    "ms-vscode-remote.remote-wsl",
-    "ms-vscode.live-server",
-    "ms-vscode.vs-keybindings",
-    "pkief.material-icon-theme",
-    "streetsidesoftware.code-spell-checker",
-    "streetsidesoftware.code-spell-checker-italian",
-    "svelte.svelte-vscode",
-    "tamasfe.even-better-toml",
-    "tombonnike.vscode-status-bar-format-toggle",
-    "visualstudioexptteam.vscodeintellicode",
-    "yzhang.markdown-all-in-one",
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
-  ],
-  "unwantedRecommendations": []
+	"recommendations": [
+		"astro-build.astro-vscode",
+		"christian-kohler.path-intellisense",
+		"aaron-bond.better-comments",
+		"biomejs.biome",
+		"bradlc.vscode-tailwindcss",
+		"github.copilot",
+		"github.copilot-chat",
+		"github.vscode-github-actions",
+		"ms-vscode-remote.remote-wsl",
+		"ms-vscode.live-server",
+		"ms-vscode.vs-keybindings",
+		"pkief.material-icon-theme",
+		"streetsidesoftware.code-spell-checker",
+		"streetsidesoftware.code-spell-checker-italian",
+		"svelte.svelte-vscode",
+		"tamasfe.even-better-toml",
+		"tombonnike.vscode-status-bar-format-toggle",
+		"visualstudioexptteam.vscodeintellicode",
+		"yzhang.markdown-all-in-one",
+		"esbenp.prettier-vscode",
+		"dbaeumer.vscode-eslint",
+		"tomoki1207.pdf"
+	],
+	"unwantedRecommendations": []
 }
